Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1060

fb303 build error for cpp

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.6, 0.7
    • None
    • C++ - Compiler
    • Patch Available

    Description

      steps:
      ./bootstrap.sh
      ./configure
      make
      sudo make install
      cd contrib/fb303
      ./bootstrap.sh
      ./configure
      make

      Fails with error:

      gen-cpp/fb303_types.cpp:11: error: 'fb_status' is not a class or namespace
      gen-cpp/fb303_types.cpp:12: error: 'fb_status' is not a class or namespace
      gen-cpp/fb303_types.cpp:13: error: 'fb_status' is not a class or namespace
      gen-cpp/fb303_types.cpp:14: error: 'fb_status' is not a class or namespace
      gen-cpp/fb303_types.cpp:15: error: 'fb_status' is not a class or namespace
      gen-cpp/fb303_types.cpp:16: error: 'fb_status' is not a class or namespace
      make[3]: *** [fb303_types.o] Error 1
      make[3]: Leaving directory `/home/sudhir/workspace/scribe/thrift-apache/contrib/fb303/cpp'
      make[2]: *** [all] Error 2
      make[2]: Leaving directory `/home/sudhir/workspace/scribe/thrift-apache/contrib/fb303/cpp'
      make[1]: *** [all-recursive] Error 1
      make[1]: Leaving directory `/home/sudhir/workspace/scribe/thrift-apache/contrib/fb303'
      make: *** [all] Error 2

      Attachments

        1. commit-55acf75
          0.9 kB
          Sudhir Jorwekar

        Activity

          People

            Unassigned Unassigned
            sudhir.jorwekar Sudhir Jorwekar
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: