THRIFT-1060 fb303 build error for cpp Patch: Sudhir Jorwekar

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1094028 13f79535-47bb-0310-9956-ffa450edef68